--- a/packages/flutter/example/pubspec.yaml
+++ b/packages/flutter/example/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_rust_bridge: ^2.0.0-dev.35
   flutter_breez_liquid: ^0.1.0
   path_provider: ^2.1.3
     # When depending on this package from a real application you should use:
