--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -15,12 +15,12 @@ frb = ["dep:flutter_rust_bridge"]
 anyhow = { workspace = true }
 bip39 = { version = "2.0.0", features = ["serde"] }
 #boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "a05731cc33030ada9ae14afcafe0cded22842ba6" }
-boltz-client = { git = "https://github.com/hydra-yse/boltz-rust", rev = "be8395900495e415699a54e15f4bd0bc6d774237" }
+boltz-client = { git = "https://github.com/ok300/boltz-rust", branch = "ok300-breez-latest-05-21" }
 flutter_rust_bridge = { version = "=2.0.0-dev.33", features = ["chrono"], optional = true }
 log = "0.4.20"
-lwk_common = "0.3.0"
-lwk_signer = "0.3.0"
-lwk_wollet = "0.3.0"
+lwk_common = "0.5.0"
+lwk_signer = "0.5.0"
+lwk_wollet = "0.5.0"
 rusqlite = { version = "0.31", features = ["backup", "bundled"] }
 rusqlite_migration = "1.0"
 serde = { version = "1.0.197", features = ["derive"] }
@@ -28,8 +28,6 @@ serde_json = "1.0.116"
 thiserror = { workspace = true }
 tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
 openssl = { version = "0.10", features = ["vendored"] }
-# TODO Remove once fully migrated to v2 API
-elements = "0.24.1"
 
 [dev-dependencies]
 tempdir = "0.3.7"
