--- a/packages/flutter/example/android/settings.gradle
+++ b/packages/flutter/example/android/settings.gradle
@@ -19,7 +19,8 @@ pluginManagement {
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version "7.1.2" apply false
-    id "org.jetbrains.kotlin.android" version "1.6.10" apply false
+    // mobile_scanner requires 1.7.20
+    id "org.jetbrains.kotlin.android" version "1.7.20" apply false
 }
 
 include ":app"
