--- a/packages/flutter/example/pubspec.yaml
+++ b/packages/flutter/example/pubspec.yaml
@@ -13,13 +13,17 @@ dependencies:
 
   flutter_rust_bridge: ^2.0.0-dev.35
   flutter_breez_liquid: ^0.1.0
+  # When depending on this package from a real application you should use:
+  #   flutter_breez_liquid: ^x.y.z
+  # See https://dart.dev/tools/pub/dependencies#version-constraints
+  # The example app is bundled with the plugin so we use a path dependency on
+  # the parent directory to use the current plugin's version.
+  # path: ../
+  bip39: ^1.0.6
+  flutter_secure_storage: ^9.2.2
+  mobile_scanner: ^5.1.1
   path_provider: ^2.1.3
-    # When depending on this package from a real application you should use:
-    #   flutter_breez_liquid: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
-    # path: ../
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +34,5 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  assets:
+    - assets/icons/
