--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -29,7 +29,9 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
 thiserror = { workspace = true }
 tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
+once_cell = "1"
 openssl = { version = "0.10", features = ["vendored"] }
+tokio = { version = "1", features = ["rt"] }
 
 # Pin these versions to fix iOS build issues
 security-framework = "=2.10.0"
