--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -28,10 +28,12 @@ rusqlite_migration = "1.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
 thiserror = { workspace = true }
-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
+tokio-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
 once_cell = "1"
 openssl = { version = "0.10", features = ["vendored"] }
 tokio = { version = "1", features = ["rt"] }
+url = "2.5.0"
+futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
 
 # Pin these versions to fix iOS build issues
 security-framework = "=2.10.0"
