--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -32,6 +32,8 @@ version = "0.0.1"
 
 [workspace.dependencies]
 anyhow = "1.0"
+log = "0.4.20"
+once_cell = "1.19"
 thiserror = "1.0"
 uniffi = "0.27.1"
 uniffi_macros = "0.27.1"
