Improve stream management

--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -31,7 +31,7 @@ thiserror = { workspace = true }
 tokio-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
 once_cell = "1"
 openssl = { version = "0.10", features = ["vendored"] }
-tokio = { version = "1", features = ["rt"] }
+tokio = { version = "1", features = ["rt", "macros"] }
 url = "2.5.0"
 futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
 
