--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -16,8 +16,10 @@ anyhow = { workspace = true }
 bip39 = { version = "2.0.0", features = ["serde"] }
 #boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "a05731cc33030ada9ae14afcafe0cded22842ba6" }
 boltz-client = { git = "https://github.com/ok300/boltz-rust", branch = "ok300-breez-latest-05-28" }
+chrono = "0.4"
+env_logger = "0.11"
 flutter_rust_bridge = { version = "=2.0.0-dev.36", features = ["chrono"], optional = true }
-log = "0.4.20"
+log = { workspace = true }
 lwk_common = "0.5.1"
 lwk_signer = "0.5.1"
 # Switch back to published version once this PR is merged: https://github.com/Blockstream/lwk/pull/34
@@ -29,7 +31,6 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
 thiserror = { workspace = true }
 tokio-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
-once_cell = "1"
 openssl = { version = "0.10", features = ["vendored"] }
 tokio = { version = "1", features = ["rt", "macros"] }
 url = "2.5.0"
