--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -55,19 +55,19 @@ jobs:
       - name: Clean up downloaded files
         run: |
           rm -f lib/bindings/langs/python/src/breez_liquid_sdk/*.a
-          ls -R lib/bindings/python
+          ls -R lib/bindings/langs/python
 
       - name: Update package version
         if: ${{ inputs.package-version }}
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: sed -i.bak -e 's/    version=".*",/    version="${{ inputs.package-version }}",/' setup.py
 
       - name: Install dependencies
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: pip3 install wheel setuptools
 
       - name: Build wheel
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: python3 setup.py bdist_wheel --plat-name macosx_11_0_universal2 --verbose
 
       - name: List wheel contents
@@ -110,15 +110,15 @@ jobs:
 
       - name: Update package version
         if: ${{ inputs.package-version }}
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: sed -i.bak -e 's/    version=".*",/    version="${{ inputs.package-version }}",/' setup.py
 
       - name: Install dependencies
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: pip3 install wheel setuptools
 
       - name: "Build wheel"
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: python3 setup.py bdist_wheel --plat-name manylinux_2_31_${{ matrix.arch }} --verbose
 
       - uses: actions/upload-artifact@v3
@@ -178,15 +178,15 @@ jobs:
 
       - name: Update package version
         if: ${{ inputs.package-version }}
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: (Get-Content setup.py) | Foreach-Object {$_ -replace '    version=".*",', ('    version="${{ inputs.package-version }}",')} | Set-Content setup.py
 
       - name: Install dependencies
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: python -m pip install --upgrade pip twine wheel setuptools
 
       - name: "Build wheel"
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: python -m setup bdist_wheel --plat-name ${{ matrix.arch }} --verbose
 
       - uses: actions/upload-artifact@v3
@@ -210,7 +210,7 @@ jobs:
           path: lib/bindings/langs/python/dist/
 
       - name: Clean downloaded contents
-        working-directory: lib/bindings/python
+        working-directory: lib/bindings/langs/python
         run: |
           find dist -maxdepth 1 ! -path dist ! -name "python-wheel-*" -exec rm -rf {} \;
           ls -laR dist
