--- a/packages/react-native/example/android/build.gradle
+++ b/packages/react-native/example/android/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         minSdkVersion = 24
         compileSdkVersion = 34
         targetSdkVersion = 34
+        kotlin_version = "1.8.0"
 
         ndkVersion = "25.1.8937393"
     }
@@ -17,6 +18,7 @@ buildscript {
         classpath('com.android.tools.build:gradle:7.4.2')
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
