--- a/packages/flutter/example/pubspec.yaml
+++ b/packages/flutter/example/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   path_provider: ^2.1.3
   qr_flutter: ^4.1.0
   intl: ^0.19.0
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
