--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -1,6 +1,6 @@
 name: breez_liquid
 description: Dart bindings for the Breez Liquid SDK
-version: 0.1.0
+version: 0.1.0-rc1
 homepage: https://breez.technology
 repository: https://github.com/breez/breez-liquid-sdk
 
