--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -39,7 +39,7 @@ url = "2.5.0"
 futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
 async-trait = "0.1.80"
 hex = "0.4"
-reqwest = { version = "=0.11.20", features = ["json"] }
+reqwest = { version = "=0.11.20", features = ["json", "blocking"] }
 electrum-client = { version = "0.19.0" }
 
 [dev-dependencies]
