--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -15,10 +15,10 @@ frb = ["dep:flutter_rust_bridge"]
 anyhow = { workspace = true }
 bip39 = { version = "2.0.0", features = ["serde"] }
 #boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "a05731cc33030ada9ae14afcafe0cded22842ba6" }
-boltz-client = { git = "https://github.com/dangeross/boltz-rust", rev = "cb2cb02d44fb81cc8ce5d8000346f52cc26b3fc1" }
+boltz-client = { git = "https://github.com/dangeross/boltz-rust", branch = "savage-chain-swaps" }
 chrono = "0.4"
 env_logger = "0.11"
-flutter_rust_bridge = { version = "=2.0.0", features = ["chrono"], optional = true }
+flutter_rust_bridge = { version = "=2.0.0-dev.38", features = ["chrono"], optional = true }
 log = { workspace = true }
 lwk_common = "0.5.1"
 lwk_signer = "0.5.1"
