Add secp256k1-zkp patch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -244,4 +244,8 @@ jobs:
           # In this test, we reference the checked out repo (e.g. this PR branch)
           cargo add --path ../lib/core breez-liquid-sdk
           
+          # Add the secp256k1-zkp patch: https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits
+          echo "[patch.crates-io]" >> Cargo.toml
+          echo "secp256k1-zkp = {git = 'https://github.com/sanket1729/rust-secp256k1-zkp.git', rev = '60e631c24588a0c9e271badd61959294848c665d'}" >> Cargo.toml
+          
           cargo clippy -- -D warnings
