Install protoc on workflow (#352)
* install protoc on workflow

(cherry picked from commit 317c7906d968eeb6726ab4a9076a8bf64bdf4a6e)

* Bump setup-protoc to v3 and 27.2

---------

Co-authored-by: Roei Erez <roeierez@gmail.com>

--- a/.github/workflows/build-bindings-android.yml
+++ b/.github/workflows/build-bindings-android.yml
@@ -49,6 +49,12 @@ jobs:
         rustup target add ${{ matrix.target }}
         cargo install cargo-ndk
 
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+      with:
+        version: "27.2"
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        
     - uses: Swatinem/rust-cache@v2
       with:
         workspaces: lib
