--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -26,7 +26,7 @@ dev_dependencies:
 
   build_runner: ^2.4.10
   ffigen: ">=8.0.0 <=11.0.0"
-  freezed: ^2.5.2
+  freezed: <=2.5.2
 
   path: ^1.9.0
 
