--- a/packages/react-native/android/build.gradle
+++ b/packages/react-native/android/build.gradle
@@ -1,7 +1,7 @@
 import groovy.json.JsonSlurper
 
 def getVersionFromNpmPackage() {
-    def inputFile = new File("$rootDir/../node_modules/@breeztech/react-native-breez-liquid-sdk/package.json")
+    def inputFile = new File("$rootDir/../node_modules/@breeztech/react-native-breez-sdk-liquid/package.json")
     def packageJson = new JsonSlurper().parseText(inputFile.text)
 
     return packageJson["version"]
@@ -73,6 +73,6 @@ dependencies {
     // the Android platform versions of JNA (specifically libjnadispatch.so) are missing when downloading the Breez Liquid SDK from Jitpack.
     // Therefore we ignore the version of JNA that comes with the Breez Liquid SDK from Jitpack
     // and manually add one that does include the necessary Android platform binaries.
-    implementation("com.github.breez:breez-liquid-sdk:${getVersionFromNpmPackage()}") { exclude group:"net.java.dev.jna" } // remove for using locally built bindings during development
+    implementation("com.github.breez:breez-sdk-liquid:${getVersionFromNpmPackage()}") { exclude group:"net.java.dev.jna" } // remove for using locally built bindings during development
     implementation("net.java.dev.jna:jna:5.14.0@aar")
 }
